# PGR

./: .gitignore  CMakeLists.txt  README.md  bssrdf.config  bssrdf.files  bssrdf.includes
cmake/: Findjsoncpp.cmake
scenes/: cornell_box_brdf.json  cornell_box_bssrdf.json  cornell_box_bssrdf_cube.json  cornell_box_compare.json  cornell_box_smallball.json  cube.json  scene01.json  sphere.json  vax.json
src/: CMakeLists.txt  bssrdf.cpp  camera.cpp  camera.h  color.cpp  color.h  intersection.cpp  intersection.h  light.cpp  light.h  light_model.h  main.cpp  main.cpp.autosave  main.h  material.cpp  material.h  objectgeometry.cpp  objectgeometry.h  plane.cpp  plane.h  point.h  ray.cpp  ray.h  ray.h.CA9176  ray.h.Ij9176  ray.h.pS9176  ray_tracer.cpp  ray_tracer.h  scene.cpp  scene.h  screen.cpp  screen.h  settings.cpp  settings.h  shape.h  vector.h  vector3.cpp  vector3.h
src/light_models/: lambertian_light_model.cpp  lambertian_light_model.h
src/materials/: brdf_material.cpp  brdf_material.h  bssrdf_material.cpp  bssrdf_material.h
src/multithreading/: thread_pool.h  thread_safe_prng.cpp  thread_safe_prng.h  thread_safe_queue.h
src/shapes/: cube.cpp  cube.h  plane.cpp  plane.h  sphere.cpp  sphere.h
